--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <div class="social-buttons">
   <a href="https://www.instagram.com/juninhoirano/" target="_blank" class="social-button instagram">Instagram</a>
   <a href="https://www.facebook.com/juninho.irano?locale=pt_BR" target="_blank" class="social-button facebook">Facebook</a>
-  <a href="https://www.linkedin.com/in/seu-perfil-linkedin" target="_blank" class="social-button linkedin">LinkedIn</a>
-  <a href="https://github.com/JuninhoIrano/projeto_acessibilidade_fatec_2023.git" target="_blank" class="social-button github">GitHub</a>
+  <a href="https://www.linkedin.com/in/junior-irano-73b137163/" target="_blank" class="social-button linkedin">LinkedIn</a>
+  <a href="https://github.com/JuninhoIrano" target="_blank" class="social-button github">GitHub</a>
   <a href="https://web.whatsapp.com/5516993563388" target="_blank" class="social-button whatsapp">WhatsApp</a>
 </div>
 
