https://github.com/JuninhoIrano/projeto_acessibilidade_fatec_2023.git

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li class="meu-titulo-conteudo">
         <h2>Formação Acadêmica</h2>
         <p>Escola Estadual 9 de Julho Taquaritinga - SP 2001</p>       
-        <p>Cursando 5º semestre de Tecnologia em Sistemas para Internet</p>
+        <p>Cursando 5º semestre de Tecnologia em Sistemas para Internet - Fatec</p>
       </li>
     </ul>
   </div>
