https://github.com/JuninhoIrano/projeto_acessibilidade_fatec_2023.git

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
         <p>Escola Estadual 9 de Julho Taquaritinga - SP 2001</p>       
         <p>Cursando 5º semestre de Tecnologia em Sistemas para Internet - Fatec</p>
       </li>
+      <li class="Qualificações e Atividades Profissionais">
+        <h2>Cursos</h2>
+        <p>Inglês intermediário – Fatec Taquaritinga e cursos online</p>       
+        <p>Curso de Java desktop – Freedom Tecnologia Taquaritinga</p>    
+        <p>Curso de Java online – Unesp Jaboticabal</p>    
+        <p>Curso de Redes Avançado – Fatec Taquaritinga</p>    
+        
+      </li>
     </ul>
   </div>
   
